--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="index.html" class="logo">ZYIPT</a>
       <nav class="site-nav" id="nav-menu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><img src="ZYIPTLOGO.png"style="width:50px;height:50px;"></img><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="programs.html">Programs</a></li>
           <li><a href="get-involved.html">Get Involved</a></li>
