--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <a href="index.html" class="logo">ZYIPT</a>
+      <a href="index.html" class="logo" style="display: inline-flex; align-items: center; text-decoration: none;">
+  <img src="ZYIPTLOGO.png" style="width: 50px; height: 50px; vertical-align: middle; margin-right: 8px;">
+  <span style="font-size: 18px; color: black;">ZYIPT</span>
+</a>
+
       <nav class="site-nav" id="nav-menu">
         <ul>
-          <li><img src="ZYIPTLOGO.png"style="width:50px;height:50px;"></img><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="programs.html">Programs</a></li>
           <li><a href="get-involved.html">Get Involved</a></li>
