--- a/about.html
+++ b/about.html
@@ -11,7 +11,12 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <a href="index.html" class="logo">ZYIPT</a>
+<a href="index.html" class="logo" style="display: inline-flex; align-items: center; text-decoration: none;">
+  <img src="ZYIPTLOGO.png" style="width: 50px; height: 50px; vertical-align: middle; margin-right: 8px;">
+  <span style="font-size: 18px; color: black;">ZYIPT</span>
+</a>
+
+      
       <nav class="site-nav" id="nav-menu">
         <ul>
           <li><a href="index.html">Home</a></li>
